Mise en place des pages : about & candidats disponible(En cours)

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
     color: rgb(49, 38, 97);
 }
 
+.text-yellow{
+    color : #e0a500
+}
+
 .bg-blue-app{
     background-color: rgb(49, 38, 97);
 }
