--- a/css/accueil.css
+++ b/css/accueil.css
@@ -94,8 +94,15 @@
   position: relative;
   top: 0;
   left: 0;
-  width: 100%;
+  /* width: 100%; */
   background-image: url('/assets/images/canavas-linear-yellow.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.bg-footer
+{
+  background-image: url('/assets/images/canvas-linear-footer.png');
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -113,8 +120,8 @@
 
 
 .section3  { 
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   background-size: cover;
   background-position: center center;
   background-repeat: repeat;
