--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,16 @@
     font-family: 'Raleway', sans-serif;
 }
 
-*, .text-secondary {
+*,
+.text-secondary {
     color: rgb(49, 38, 97);
 }
 
-.text-yellow{
-    color : #e0a500
+.text-yellow {
+    color: #e0a500
 }
 
-.bg-blue-app{
+.bg-blue-app {
     background-color: rgb(49, 38, 97);
 }
 
@@ -22,122 +23,173 @@
 
 .text-outline {
     -webkit-text-stroke-width: calc(2px + 0 * ((100vw - 320px) / 1120));
-    -webkit-text-stroke-color: #fff!important;
+    -webkit-text-stroke-color: #fff !important;
     color: transparent;
 }
-  
-h1.presentation{
+
+h1.presentation {
     font-size: 100px;
     font-weight: 1000;
     color: #fff;
     text-decoration: wavy;
-  
+
 }
 
 
 /* Font-weight */
 
-.fw-1{
+.fw-1 {
     font-weight: 100;
 }
-.fw-2{
+
+.fw-2 {
     font-weight: 200;
 }
-.fw-3{
+
+.fw-3 {
     font-weight: 300;
 }
-.fw-4{
+
+.fw-4 {
     font-weight: 400;
 }
-.fw-5{
+
+.fw-5 {
     font-weight: 500;
 }
-.fw-6{
+
+.fw-6 {
     font-weight: 600;
 }
-.fw-7{
+
+.fw-7 {
     font-weight: 700;
 }
-.fw-8{
+
+.fw-8 {
     font-weight: 800;
 }
-.fw-9{
+
+.fw-9 {
     font-weight: 900;
 }
-.fw-10{
+
+.fw-10 {
     font-weight: 1000;
 }
 
 /*  Font-size */
 
 
-.font-size-1{
+.font-size-1 {
     font-size: 10px;
 }
-.font-size-2{
+
+.font-size-2 {
     font-size: 20px;
 }
-.font-size-3{
+
+.font-size-3 {
     font-size: 30px;
 }
-.font-size-4{
+
+.font-size-4 {
     font-size: 40px;
 }
-.font-size-5{
+
+.font-size-5 {
     font-size: 50px;
 }
-.font-size-6{
+
+.font-size-6 {
     font-size: 60px;
 }
-.font-size-7{
+
+.font-size-7 {
     font-size: 70px;
 }
-.font-size-8{
+
+.font-size-8 {
     font-size: 80px;
 }
-.font-size-9{
+
+.font-size-9 {
     font-size: 90px;
 }
-.font-size-10{
+
+.font-size-10 {
     font-size: 100px;
 }
 
 /*  Radius */
 
 
-.br-1{
+.br-1 {
     border-radius: 10px;
 }
-.br-2{
+
+.br-2 {
     border-radius: 20px;
 }
-.br-3{
+
+.br-3 {
     border-radius: 30px;
 }
-.br-4{
+
+.br-4 {
     border-radius: 40px;
 }
-.br-5{
+
+.br-5 {
     border-radius: 50px;
 }
-.br-6{
+
+.br-6 {
     border-radius: 60px;
 }
-.br-7{
+
+.br-7 {
     border-radius: 70px;
 }
-.br-8{
+
+.br-8 {
     border-radius: 80px;
 }
-.br-9{
+
+.br-9 {
     border-radius: 90px;
 }
-.br-10{
+
+.br-10 {
     border-radius: 100px;
 }
+
 /*  */
 
 
-.p1{
-    font-size:  34px;
+.p1 {
+    font-size: 34px;
 }
+
+/* ==========Animations============================ */
+
+#loader {
+    position: fixed;
+    background-color: #fff;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+#loader img {
+    width: 120px;
+    height: 120px;
+}
+
+/* @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  } */
