--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,7 @@ h1.presentation {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1000000000000;
 }
 
 #loader img {
